RESOLVED FIXED218430
WebKitTestRunner --show-webview doesn't work since r268238
https://bugs.webkit.org/show_bug.cgi?id=218430
Summary WebKitTestRunner --show-webview doesn't work since r268238
Fujii Hironori
Reported 2020-11-01 23:48:44 PST
WebKitTestRunner --show-webview doesn't work
Attachments
Patch (2.37 KB, patch)
2020-11-01 23:53 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2020-11-01 23:53:02 PST
Simon Fraser (smfr)
Comment 2 2020-11-03 11:50:12 PST
*** Bug 218526 has been marked as a duplicate of this bug. ***
Fujii Hironori
Comment 3 2020-11-03 11:54:59 PST
Comment on attachment 412888 [details] Patch Clearing flags on attachment: 412888 Committed r269324: <https://trac.webkit.org/changeset/269324>
Fujii Hironori
Comment 4 2020-11-03 11:55:03 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2020-11-03 11:56:33 PST
Note You need to log in before you can comment on or make changes to this bug.