WebKitTestRunner --show-webview doesn't work since r268238 https://bugs.webkit.org/show_bug.cgi?id=218430

Reviewed by Simon Fraser.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::initialize): Use insert_or_assign() of
std::unordered_map instead of insert() which does nothing if the
key already exists.

Canonical link: https://commits.webkit.org/231171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269324 268f45cc-cd09-0410-ab3c-d52691b4dbfc